syntax = "proto3";
package cosmos.auth.v1beta1;

import "gogoproto/gogo.proto";

option go_package = "github.com/line/lbm-sdk/x/auth/types";

// Msg defines the auth Msg service.
service Msg {
  // Empty defines a method that doesn't do anything. Used to measure performance.
  rpc Empty(MsgEmpty) returns (MsgEmptyResponse);
}

// MsgEmpty represents a message that doesn't do anything. Used to measure performance.
message MsgEmpty {
  option (gogoproto.equal)           = false;
  option (gogoproto.goproto_getters) = false;

  string from_address = 1 [(gogoproto.moretags) = "yaml:\"from_address\""];
}

// MsgEmptyResponse defines the Msg/Empty response type.
message MsgEmptyResponse {}
